--- a/人工智慧導論.ipynb
+++ b/人工智慧導論.ipynb
@@ -47,6 +47,7 @@
         "ouQp47OYMQ0F",
         "J4pXxKm4DUQt",
         "MgKG4ucJ0Wej",
+        "LRgFYNlyz4rQ",
         "gb9Btyr19KM5",
         "qA0AabuZ9CZp",
         "1-dJGxSk85O1",
@@ -60,7 +61,7 @@
         "z3hGKkBRuyeC",
         "fT03y1Ckfede"
       ],
-      "authorship_tag": "ABX9TyOrUVzVzyrAFSryMLwA4gZH",
+      "authorship_tag": "ABX9TyMDwFzJMzNVbZcoim0xrP3L",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -242,17 +243,14 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "5vRE_yLiAm3R",
-        "colab_type": "code",
-        "colab": {}
+        "id": "ViVrqnBEpv9l",
+        "colab_type": "text"
       },
       "source": [
         ""
-      ],
-      "execution_count": 0,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
