--- a/人工智慧導論.ipynb
+++ b/人工智慧導論.ipynb
@@ -47,7 +47,6 @@
         "ouQp47OYMQ0F",
         "J4pXxKm4DUQt",
         "MgKG4ucJ0Wej",
-        "LRgFYNlyz4rQ",
         "gb9Btyr19KM5",
         "qA0AabuZ9CZp",
         "1-dJGxSk85O1",
@@ -61,7 +60,7 @@
         "z3hGKkBRuyeC",
         "fT03y1Ckfede"
       ],
-      "authorship_tag": "ABX9TyMDwFzJMzNVbZcoim0xrP3L",
+      "authorship_tag": "ABX9TyNYwlVg0qlnHpWrOQlhO5va",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2006,7 +2005,14 @@
         "colab_type": "text"
       },
       "source": [
-        "DNN, CNN, RNN, GNN"
+        "\n",
+        "深度學習又是機器學習的分支，深度學習是人工智慧中，成長最快的領域，深度學習模擬人類神經網絡的運作方式，常見的深度學習架構，如\n",
+        "\n",
+        "- 多層感知器 MLP(Multilayer Perceptron)、\n",
+        "- 深度神經網路 DNN(Deep Neural Network)、\n",
+        "- 卷積神經網路 CNN(Convolutional Neural Network)、\n",
+        "- 遞迴神經網路 RNN(Recurrent Neural Network)、\n",
+        "- 圖網路 GNN(Graph Neural Network)。\n"
       ]
     },
     {
@@ -2017,6 +2023,16 @@
       },
       "source": [
         "## **6.1 DNN**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ubyIXGydv7CW",
+        "colab_type": "text"
+      },
+      "source": [
+        "<img src=\"https://pic.pimg.tw/jakesheu/1544003168-278864291.jpg\" width=\"50%\">"
       ]
     },
     {
