--- a/人工智慧導論.ipynb
+++ b/人工智慧導論.ipynb
@@ -12,11 +12,17 @@
         "4qM81FYMoL2k",
         "M-QxsrU-mPtW",
         "ZW737al5l1DY",
+        "KZmLGE88QNNY",
         "MRxKI7ZhrIn2",
+        "K5ATANWlQxkx",
+        "2OT7NcADQ4I_",
+        "KG6skQFzRCKp",
         "X1j7WIfXrXHp",
         "prmGvPE84Wpa",
         "Dj5u88P5rXMP",
         "1y-qxCcasEC6",
+        "haOyc6DTs13_",
+        "cpOt0oxX4k9K",
         "04juoRTH44uq",
         "dipVAvpQ5FAQ",
         "sIga-hAMthyU",
@@ -60,7 +66,7 @@
         "z3hGKkBRuyeC",
         "fT03y1Ckfede"
       ],
-      "authorship_tag": "ABX9TyNYwlVg0qlnHpWrOQlhO5va",
+      "authorship_tag": "ABX9TyOVor6mqhCpT6QGUEEp2njA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -142,7 +148,7 @@
         "colab_type": "text"
       },
       "source": [
-        "### **. Google Colaboratory**<img src=\"https://hackintos.com/wp-content/uploads/2020/04/Google-drive-Colab-770x433.jpg\" width=\"10%\"/>  "
+        "### <img src=\"https://hackintos.com/wp-content/uploads/2020/04/Google-drive-Colab-770x433.jpg\" width=\"10%\"/> **. Google Colaboratory .** "
       ]
     },
     {
@@ -171,7 +177,7 @@
         "colab_type": "text"
       },
       "source": [
-        "### **. Anaconda** <img src=\"https://simpleanalytical.com/images/anaconda-logo2.png\" width=\"15%\"/>"
+        "### <img src=\"https://simpleanalytical.com/images/anaconda-logo2.png\" width=\"15%\"/> **. Anaconda .** "
       ]
     },
     {
@@ -212,7 +218,7 @@
         "---\n",
         "Chapter 1、 大數據 (Big Data)\n",
         "\n",
-        "<img src=\"https://www.exltech.in/assets/img/courses/big_data_hadoop.jpg\" alt=\"alt\" width=\"60%\"/>\n"
+        "<img src=\"https://www.exltech.in/assets/img/courses/big_data_hadoop.jpg\" alt=\"alt\" width=\"50%\"/>\n"
       ]
     },
     {
@@ -237,8 +243,18 @@
         "---\n",
         "Chapter 2、 人工智慧 (Artificial Intelligence, AI)\n",
         "\n",
-        "<img src=\"https://i.imgur.com/SHtuGvu.png\" alt=\"alt\" width=\"60%\"/>\n",
+        "<img src=\"https://i.imgur.com/SHtuGvu.png\" alt=\"alt\" width=\"50%\"/>\n",
         "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "KZmLGE88QNNY",
+        "colab_type": "text"
+      },
+      "source": [
+        "## **2.1 人工智慧 AI 發展史**"
       ]
     },
     {
@@ -248,7 +264,27 @@
         "colab_type": "text"
       },
       "source": [
-        ""
+        "<img src=\"https://dahetalk.files.wordpress.com/2018/04/e4babae5b7a5e699bae685a7aie799bce5b195e58fb2.png?w=1024\" width=\"60%\"/>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "14LxCm-oPORH",
+        "colab_type": "text"
+      },
+      "source": [
+        "**第一次AI浪潮**\n",
+        "\n",
+        "- 第一次AI浪潮起於1950～1960年，止於1980年代。由於出現在網路之前，因此又被稱為「古典人工智慧」。這時期出現的「符號主義」與「聯結主義」，分別是日後「專家系統」與「深度學習」的雛形。只不過，雖然當時的成果已能解開拼圖或簡單的遊戲，卻幾乎無法解決實用的問題。\n",
+        "\n",
+        "**第二次AI浪潮**\n",
+        "\n",
+        "- 第二次AI熱潮伴隨著電腦的普及，出現在1980年代。這時期所進行的研究，是以灌輸「專家知識」作為規則，來協助解決特定問題的「專家系統」（Expert system）為主。然而，縱使當時有商業應用的實例，應用範疇卻很有限，熱潮也因此逐漸消退。\n",
+        "\n",
+        "**第三次AI浪潮**\n",
+        "\n",
+        "- 第三次AI浪潮則出現於2010年代，伴隨著高性能電腦、網際網路、大數據、感測器的普及，以及計算成本的下降，「機器學習」隨之興起。所謂機器學習（Machine leaning），是指讓電腦大量學習資料，使它可以像人類一樣辨識聲音及影像，或是針對問題做出合適的判斷。"
       ]
     },
     {
@@ -264,6 +300,16 @@
         "Chapter 3、 機器學習簡介 (Machine Learning Introduction)\n",
         "\n",
         "<img src=\"https://res.cloudinary.com/springboard-images/image/upload/q_auto,f_auto,fl_lossy/wordpress/2019/07/sb-blog-what-is-mle.png\" alt=\"alt\" width=\"50%\"/>\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "K5ATANWlQxkx",
+        "colab_type": "text"
+      },
+      "source": [
+        "## **What's Machine Learning**"
       ]
     },
     {
@@ -293,6 +339,16 @@
         "\n",
         "- 對話 f( \"How Are You\" ) ==> \"I am fine, Thank You !\"\n",
         "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "2OT7NcADQ4I_",
+        "colab_type": "text"
+      },
+      "source": [
+        "## **3.2 Machine Learning Types**"
       ]
     },
     {
@@ -422,6 +478,16 @@
         "      強化學習一面要采用（exploitation）已經發現的有效行動，另一方面也要探索（exploration）那些沒有被認可的行動，已找到更好的解決方案。\n",
         "    - 考慮整個問題而不是子問題。\n",
         "    - 通用AI解決方案。"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "KG6skQFzRCKp",
+        "colab_type": "text"
+      },
+      "source": [
+        "## **3.3 Machine Learning Procedure**"
       ]
     },
     {
@@ -574,8 +640,9 @@
         "---\n",
         "Chapter 4、 機器學習演算法 (Machine Learning Algorithm)\n",
         "\n",
-        "ML Task Introduction : https://eleg5491.github.io/ml_basics/\n",
-        "<img src = \"https://eleg5491.github.io/assets/ml/ml_task.png\" alt=\"alt\" width=\"80%\" />"
+        "[ML Task Introduction](https://eleg5491.github.io/ml_basics/)\n",
+        "\n",
+        "<img src = \"https://eleg5491.github.io/assets/ml/ml_task.png\" alt=\"alt\" width=\"60%\" />"
       ]
     },
     {
@@ -2044,7 +2111,23 @@
       "source": [
         "EX6.1.1 KC House Sales Price Preidiction (Use DNN model) & overfitting example\n",
         "\n",
+        "Regression\n",
+        "\n",
         "[**>>KC House Sales Price Pridiction sample code**](https://github.com/andyrkchang/THU_IE_AI_PROGRAM/blob/master/DL/DNN_KC_HouseSalesPricePredict.ipynb)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "aI4tK12qjW-X",
+        "colab_type": "text"
+      },
+      "source": [
+        "EX6.1.2 \n",
+        "\n",
+        "Classification\n",
+        "\n",
+        ">>"
       ]
     },
     {
